feat(oom exercise): meta space,direct memory,heap , stack